Fix: setting scroll on mobile Fix: text selection on game doubleclick Fix: landing page scroll on mobile

--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -19,6 +19,7 @@
 .landing .landing-wrapper {
 	width: 100vw;
 	height: 100vh;
+	height: -webkit-fill-available;
 	background: var(--primary-bg-color);
 	color: var(--primary-font-color);
 }
