--- a/src/css/main.css
+++ b/src/css/main.css
@@ -54,6 +54,7 @@ body {
 	height: 100%;
 	color: var(--primary-font-color);
 	background-color: var(--primary-bg-color);
+	user-select: none;
 }
 
 a {
@@ -224,6 +225,7 @@ a.navitem, div.navitem{
 	text-align:center;
 	font-size:110%;
 	box-shadow: 0px 1px 4px var(--box-shadow-color);
+	user-select: text;
 }
 
 /* || Notation */
@@ -244,6 +246,7 @@ a.navitem, div.navitem{
 	bottom: 0;
 	left: 0;
 	position: absolute;
+	user-select: text;
 }
 
 .section-title{
@@ -396,6 +399,7 @@ a.navitem, div.navitem{
 	right: 0;
 	position: absolute;
 	width: 180px;
+	user-select: text;
 }
 
 #room_divs{
@@ -464,18 +468,31 @@ a.navitem, div.navitem{
 
 /* || Settings */
 #settings-drawer {
-	position: fixed;
-	top: 0px;
+	position: absolute;
 	z-index: 30;
 	background-color: var(--primary-bg-color);
 	border-right: 1px solid var(--primar-border-color);
-	bottom: 0;
 	width: 225px;
+	height: 100vh;
+	height: -webkit-fill-available;
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+
+.settings-header {
+	position: fixed;
+	width: inherit;
+	background-color: var(--primary-bg-color);
+}
+
+.settings-pane {
+	padding: 0 8px 16px 8px;
 }
 
 /* || Modals */
 .modal {
 	text-align: center;
+	user-select: text;
 }
 
 .modal:after {
@@ -665,13 +682,6 @@ input:invalid {
 	fill: var(--dark-fill-color);
 }
 
-.settings-pane {
-	padding: 0 8px;
-	overflow-y: scroll;
-	height: 90vh;
-	overflow-x: hidden;
-}
-
 /* || UTILITIES */
 
 /* FLEX  */
@@ -840,7 +850,6 @@ input:invalid {
 }
 
 /* || Button CSS */
-
 .btn.focus,
 .btn:focus,
 .btn:hover {
@@ -884,8 +893,8 @@ input:invalid {
 .btn-slim {
 	height: 30px;
 }
-/* || Responsive CSS */
 
+/* || Responsive CSS */
 @media (min-width: 768px){
 	.navbar-nav > li > a{
 		padding: 8px;
@@ -975,9 +984,5 @@ input:invalid {
 
 	#scratchlist li {
 		width: 100vw;
-	}
-
-	.settings-pane {
-		height: calc(100vh - 100px);
 	}
 }
